[package]
name = "maskedu"
version = "0.1.0"
authors = ["Tochukwu Nkemdilim <nkemdilimtochukwu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.13.0"
lazy_static = "1.4.0"
clokwerk = "0.2.2"
chrono = {version = "0.4.9", features = ["serde"] }
warp = "0.1.20"
tower-web = "0.3.7"
serde_derive = "1.0.101"
serde = "1.0.101"
tokio = "0.1.22"
dotenv = "0.14.1"
load-dotenv = "0.1.1"
bcrypt = "0.6.0"
diesel = { version = "1.0.0", features = ["postgres", "mysql", "chrono"] }
jsonwebtoken = "6.0.1"
http = "0.1.18"
